[package]
name = "backlog-wiki-mdbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
mdbook = "0.4.28"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.4.0"
